Support DefaultMainViewParent in Test Assist (2219) (#3346)